# find_the_viewpoint

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  cmake_install.cmake  configuration.yaml  configuration_best.yaml  docker-compose.yml  find_the_viewpoint  package.xml  print_code.sh  pyproject.toml  readme.md  run.sh  run_project.sh  vcpkg.json
.run/: find_the_viewpoint.run.xml
3d_models/: models_info.json  obj_000016.ply  obj_000016.stl
cfg/: default.json
cmake/: BuildOptimizations.cmake  CompilerSettings.cmake  Dependencies.cmake  PrecompiledHeaders.cmake  ProjectSettings.cmake  Resources.cmake  SourceGeneration.cmake  SourceManagement.cmake  Utilities.cmake  generate_sources.sh  generate_test_sources.sh  vcpkg.cmake  viewpoint_coreConfig.cmake.in
config/: configuration.yaml
core/: .gitignore  CMakeLists.txt  screenshot-1723457530.cam
core/cfg/: default.json
core/include/: config.hpp  eye.hpp  image.hpp  path_and_vis.hpp  task1.hpp  task2.hpp
core/include/common/: timer.hpp
core/include/common/formatting/: fmt_eigen.hpp  fmt_fallback.hpp
core/include/common/io/: image.hpp  io.hpp
core/include/common/utilities/: camera.hpp  image.hpp  math.hpp
core/include/core/: eye.hpp
core/include/core/vision/: simulator.hpp
core/python/: generate_boxplot.py
core/src/: image.cpp  lightglue.cpp  main.cpp  path_and_vis.cpp  task1.cpp  task2.cpp
core/src/core/: camera.cpp  eye.cpp  simulator.cpp  view.cpp
core/stats/: pyproject.toml
core/task2/dfs_meta/obj_000020/: 2_meta.txt
docker/: Dockerfile  base.Dockerfile
docker/scripts/: prepare.sh
include/: ApplyLightGlueWrapper.hpp  config.hpp  executor.hpp  ftv.hpp  image.hpp  image_processing.hpp  path_and_vis.hpp  robot_perception.hpp  sift.hpp  task1.hpp  task2.hpp  tasks.hpp
include/api/: pose_callback.hpp  pose_publisher.hpp
include/api/interface/: callback.hpp  publisher.hpp
include/cache/: viewpoint_cache.hpp
include/clustering/: dbscan.hpp
include/common/: timer.hpp
include/common/formatting/: fmt_camera_parameters.hpp  fmt_cv.hpp  fmt_eigen.hpp  fmt_vector.hpp  fmt_view.hpp  fmt_yaml.hpp
include/common/io/: image.hpp  io.hpp
include/common/logging/: logger.hpp
include/common/metrics/: metrics_collector.hpp
include/common/state/: state.hpp
include/common/traits/: optimization_traits.hpp
include/common/utilities/: camera_utils.hpp  file_utils.hpp  image.hpp  matrix.hpp  matrix_utils.hpp  visualizer.hpp
include/config/: config.hpp  configuration.hpp
include/core/: camera.hpp  camera_viewpoint.hpp  eye.hpp  perception.hpp  renderer.hpp  robot.hpp  simulator.hpp  view.hpp
include/core/vision/: perception.hpp  robot.hpp  simulator.hpp
include/evaluation/: evaluator.hpp  viewpoint_evaluator.hpp
include/filtering/: filter.hpp  heuristic_filter.hpp  quadrant_filter.hpp  spherical_filter.hpp
include/filtering/heuristics/: distance_heuristic.hpp  heuristic.hpp  (+2 more)
include/interface/: pose_callback.hpp  pose_publisher.hpp
include/logging/: results_logger.hpp
include/misc/: target_generator.hpp
include/optimization/: acquisition.hpp  apso.hpp  bayesian_optimizer.hpp  cma_es_optimizer.hpp  cmaes.hpp  convergence_checker.hpp  engine.hpp  gaussian_process.hpp  gpr.hpp  gpr_model.hpp  hyperparameter_optimizer.hpp  levenberg_marquardt.hpp  local_optimizer.hpp  local_refiner.hpp  multistart_optimizer.hpp  octree.hpp  optimizer.hpp  pose_optimizer.hpp  pso.hpp  radius_optimizer.hpp  radius_refiner.hpp  viewpoint_optimizer.hpp
include/processing/: image.hpp  image_preprocessor.hpp  image_processor.hpp
include/sampling/: constrained_spherical_sampler.hpp  halton_sampler.hpp  lhs_sampler.hpp  sampler.hpp  transformer.hpp  viewpoint_sampler.hpp
include/spatial/: octree.hpp
include/tasks/: task_manager.hpp
include/types/: cluster.hpp  concepts.hpp  image.hpp  image_comparison_result.hpp  viewpoint.hpp
include/viewpoint/: evaluator.hpp  generator.hpp  loader.hpp  octree.hpp  provider.hpp
launch/: ftv_real.launch.py  ftv_rviz.launch.py  ftv_sim.launch.py  xarm7_ftv.launch.py  xarm7_moveit_gazebo.launch.py  xarm7_moveit_rviz.launch.py
metrics/: metrics_obj_000001.csv  metrics_obj_000001_FEATURE.csv  metrics_obj_000001_SSIM.csv  metrics_obj_000002_SSIM.csv  metrics_obj_000004_FEATURE.csv  metrics_obj_000005_COMPOSITE.csv  metrics_obj_000005_FEATURE.csv  metrics_obj_000005_SSIM.csv  metrics_obj_000006_FEATURE.csv  metrics_obj_000007_COMPOSITE.csv  metrics_obj_000008_COMPOSITE.csv  metrics_obj_000008_FEATURE.csv  metrics_obj_000009_FEATURE.csv  metrics_obj_000010_COMPOSITE.csv
models/: object_model.sdf
python/: generate_boxplot.py  generate_meta.py
python/pgf/: compute time.csv  distance to target.csv  number of views.csv  peak signal to noise ratio (PSNR).csv  structural similarity (SSIM).csv  traversed distance.csv
reference_codes/: fix_y_top_pose.cpp  path_and_vis.cpp
reference_codes/real_world_ros_codes/: DefaultConfiguration.yaml  readme.txt
src/: ApplyLightGlueWrapper.cpp  executor.cpp  ftv.cpp  image.cpp  image_processing.cpp  main.cpp  path_and_vis.cpp  robot_perception.cpp  sift.cpp  task1.cpp  task2.cpp  tasks.cpp
src/config/: config.cpp  configuration.cpp
src/core/: camera.cpp  camera_viewpoint.cpp  perception.cpp  renderer.cpp  simulator.cpp  view.cpp
src/evaluation/: ssim.cpp  viewpoint_evaluator.cpp
src/filtering/: filter.cpp  heuristic_filter.cpp  spherical_filter.cpp
src/logging/: results_logger.cpp
src/optimization/: cma_es_optimizer.cpp  cmaes.cpp  gaussian_process.cpp  gp.cpp
src/processing/: dfs.cpp  image.cpp  image_processor.cpp
src/sampling/: constrained_spherical_sampler.cpp  halton_sampler.cpp  lhs_sampler.cpp  sampler.cpp
src/tasks/: task_manager.cpp
src/viewpoint/: generator.cpp  loader.cpp  provider.cpp
srdf/: _xarm7_macro.srdf.xacro  xarm.srdf.xacro  xarm_macro.srdf.xacro
stats/: notebook.ipynb
tests/: configuration.yaml  main.cpp
tests/sampling/: halton_sampler_test.cpp
urdf/: xarm7.urdf.xacro  xarm7_with_camera.urdf.xacro  xarm7_with_object.urdf.xacro
(+651 files in other folders)
