<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>find_the_viewpoint</name>
    <version>0.1.0</version>
    <description>A package for finding optimal viewpoints using a robotic arm</description>
    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>

    <depend>libopencv-dev</depend>
    <depend>eigen</depend>
    <depend>spdlog</depend>
    <depend>yaml-cpp</depend>
    <!--    <depend>jsoncpp</depend>-->
    <depend>libpcl-all-dev</depend>
    <depend>libfmt-dev</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>