[tool.poetry]
name = "ftv"
version = "0.1.0"
description = ""
authors = ["Ayush <aym@protonmail.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.6.0"
plotly = "^5.24.0"
ipywidgets = "^8.1.5"
matplotlib = "^3.9.2"
numpy = "^2.1.0"
pandas = "^2.2.2"
scipy = "^1.14.1"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
